# anatomy-of-a-video-game

./: .gitignore  CMakeLists.txt  GenerateProjects.bat  Main.sharpmake.cs  README.md
data/: basic.hlsl  textured.hlsl
include/: Application.h  Log.h  Renderer.h  Util.h  Window.h
src/: Application.cpp  Log.cpp  Main.cpp  Renderer.cpp  Util.cpp  Window.cpp  main.cpp
tools/Sharpmake/: Sharpmake.Application.deps.json
